fixed swagger bugs
