# internal/app/models/errors.go
@@ -1,15 +1,0 @@
-package models
-
-// Error ...
-type Error struct {
-	Message string `json:"message"`
-}
-
-// StandardErrorModel ...
-type StandardErrorModel struct {
-	Error Error `json:"error" exsample:"helloooooo"`
-}
-
-type Empty struct{
-	
-}
